Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-8408

Qt no longer show the 'X' button in the right corner of WM applications that are maximized. [REG]

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.7.0
    • 4.6.2
    • None
    • None
    • Windows Mobile 5.0 and 6.0
    • 5f76c2b168ded91835d5d161b738a5dc03556cf6, 2c1aafa47b8915ea8aae8da229d65086e42543b3, ad4aff6e2d188d88a2c6b4b692932adb08491d22

      .When we launch our Qt application that is maximized, the minimize button is no longer being drawn (I am refering to the X button that typically appears on the upper, right-hand corner of the display).

      With Qt 4.4, the minimize button was being displayed as expected.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jbornema Joerg Bornemann
            xcm Martin Petersson (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes