Windows mobile: show the [X] button in the taskbar when maximizing

We're now showing the cancel button explicitly in the taskbar on
maximize, if the widget does not have the widget flags
CancelButtonHint and OKButtonHint.

Task-number: QTBUG-8408
Reviewed-by: Martin Petersson